generated/LALGParser.py
# Generated from LALG.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class LALGParser ( Parser ):

    grammarFileName = "LALG.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'program'", 
                     "'procedure'", "'begin'", "'end'", "'var'", "'if'", 
                     "'else'", "'while'", "'do'", "':'", "';'", "'.'", "','", 
                     "':='", "'not'", "'('", "')'", "'boolean'", "'int'", 
                     "'real'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", 
                     "'+'", "'-'", "'or'", "'*'", "'div'", "'and'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "BARCOMMENT", "BRACKETCOMMENT", "PROGRAM", 
                      "PROCEDURE", "BEGIN", "END", "VAR", "IF", "ELSE", 
                      "WHILE", "DO", "COLON", "SEMI", "DOT", "COMMA", "ASSIGN", 
                      "NOT", "LPAREN", "RPAREN", "BOOLEAN", "INTEGER", "REAL", 
                      "EQUAL", "NOT_EQUAL", "LT", "LE", "GT", "GE", "PLUS", 
                      "MINUS", "OR", "STAR", "DIV", "AND", "TRUE", "FALSE", 
                      "NUMINT", "NUMREAL", "IDENT", "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_variableDeclarationPart = 2
    RULE_variableDeclaration = 3
    RULE_simpleType = 4
    RULE_identifierList = 5
    RULE_procedureDeclarationPart = 6
    RULE_procedureDeclaration = 7
    RULE_formalParameter = 8
    RULE_formalParameterSection = 9
    RULE_compoundStatement = 10
    RULE_statement = 11
    RULE_assignmentStatement = 12
    RULE_procedureStatement = 13
    RULE_conditionalStatement = 14
    RULE_repetetiveStatement = 15
    RULE_expression = 16
    RULE_relationalOperator = 17
    RULE_simpleExpression = 18
    RULE_additiveOperator = 19
    RULE_term = 20
    RULE_multiplicativeOperator = 21
    RULE_factor = 22
    RULE_unsignedNumber = 23
    RULE_variable = 24
    RULE_expressionList = 25
    RULE_identifier = 26

    ruleNames =  [ "program", "block", "variableDeclarationPart", "variableDeclaration", 
                   "simpleType", "identifierList", "procedureDeclarationPart", 
                   "procedureDeclaration", "formalParameter", "formalParameterSection", 
                   "compoundStatement", "statement", "assignmentStatement", 
                   "procedureStatement", "conditionalStatement", "repetetiveStatement", 
                   "expression", "relationalOperator", "simpleExpression", 
                   "additiveOperator", "term", "multiplicativeOperator", 
                   "factor", "unsignedNumber", "variable", "expressionList", 
                   "identifier" ]

    EOF = Token.EOF
    BARCOMMENT=1
    BRACKETCOMMENT=2
    PROGRAM=3
    PROCEDURE=4
    BEGIN=5
    END=6
    VAR=7
    IF=8
    ELSE=9
    WHILE=10
    DO=11
    COLON=12
    SEMI=13
    DOT=14
    COMMA=15
    ASSIGN=16
    NOT=17
    LPAREN=18
    RPAREN=19
    BOOLEAN=20
    INTEGER=21
    REAL=22
    EQUAL=23
    NOT_EQUAL=24
    LT=25
    LE=26
    GT=27
    GE=28
    PLUS=29
    MINUS=30
    OR=31
    STAR=32
    DIV=33
    AND=34
    TRUE=35
    FALSE=36
    NUMINT=37
    NUMREAL=38
    IDENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(LALGParser.PROGRAM, 0)

        def identifier(self):
            return self.getTypedRuleContext(LALGParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(LALGParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(LALGParser.BlockContext,0)


        def DOT(self):
            return self.getToken(LALGParser.DOT, 0)

        def getRuleIndex(self):
            return LALGParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LALGParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(LALGParser.PROGRAM)
            self.state = 55
            self.identifier()
            self.state = 56
            self.match(LALGParser.SEMI)
            self.state = 57
            self.block()
            self.state = 58
            self.match(LALGParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclarationPart(self):
            return self.getTypedRuleContext(LALGParser.VariableDeclarationPartContext,0)


        def procedureDeclarationPart(self):
            return self.getTypedRuleContext(LALGParser.ProcedureDeclarationPartContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(LALGParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LALGParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LALGParser.BOOLEAN, LALGParser.INTEGER, LALGParser.REAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.variableDeclarationPart()
                self.state = 61
                self.procedureDeclarationPart()
                self.state = 62
                self.compoundStatement()
                pass
            elif token in [LALGParser.BEGIN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.compoundStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(LALGParser.VariableDeclarationContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMI)
            else:
                return self.getToken(LALGParser.SEMI, i)

        def getRuleIndex(self):
            return LALGParser.RULE_variableDeclarationPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarationPart" ):
                listener.enterVariableDeclarationPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarationPart" ):
                listener.exitVariableDeclarationPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclarationPart" ):
                return visitor.visitVariableDeclarationPart(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclarationPart(self):

        localctx = LALGParser.VariableDeclarationPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclarationPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.variableDeclaration()
            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.match(LALGParser.SEMI)
                    self.state = 69
                    self.variableDeclaration() 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 75
            self.match(LALGParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleType(self):
            return self.getTypedRuleContext(LALGParser.SimpleTypeContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(LALGParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = LALGParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.simpleType()
            self.state = 78
            self.identifierList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(LALGParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(LALGParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(LALGParser.REAL, 0)

        def getRuleIndex(self):
            return LALGParser.RULE_simpleType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleType" ):
                listener.enterSimpleType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleType" ):
                listener.exitSimpleType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleType" ):
                return visitor.visitSimpleType(self)
            else:
                return visitor.visitChildren(self)




    def simpleType(self):

        localctx = LALGParser.SimpleTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simpleType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LALGParser.BOOLEAN) | (1 << LALGParser.INTEGER) | (1 << LALGParser.REAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(LALGParser.IdentifierContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.COMMA)
            else:
                return self.getToken(LALGParser.COMMA, i)

        def getRuleIndex(self):
            return LALGParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = LALGParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.identifier()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGParser.COMMA:
                self.state = 83
                self.match(LALGParser.COMMA)
                self.state = 84
                self.identifier()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDeclarationPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def procedureDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.ProcedureDeclarationContext)
            else:
                return self.getTypedRuleContext(LALGParser.ProcedureDeclarationContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMI)
            else:
                return self.getToken(LALGParser.SEMI, i)

        def getRuleIndex(self):
            return LALGParser.RULE_procedureDeclarationPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureDeclarationPart" ):
                listener.enterProcedureDeclarationPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureDeclarationPart" ):
                listener.exitProcedureDeclarationPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDeclarationPart" ):
                return visitor.visitProcedureDeclarationPart(self)
            else:
                return visitor.visitChildren(self)




    def procedureDeclarationPart(self):

        localctx = LALGParser.ProcedureDeclarationPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_procedureDeclarationPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGParser.PROCEDURE:
                self.state = 90
                self.procedureDeclaration()
                self.state = 91
                self.match(LALGParser.SEMI)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(LALGParser.PROCEDURE, 0)

        def identifier(self):
            return self.getTypedRuleContext(LALGParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(LALGParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(LALGParser.BlockContext,0)


        def formalParameter(self):
            return self.getTypedRuleContext(LALGParser.FormalParameterContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_procedureDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureDeclaration" ):
                listener.enterProcedureDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureDeclaration" ):
                listener.exitProcedureDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDeclaration" ):
                return visitor.visitProcedureDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def procedureDeclaration(self):

        localctx = LALGParser.ProcedureDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_procedureDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(LALGParser.PROCEDURE)
            self.state = 99
            self.identifier()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LALGParser.LPAREN:
                self.state = 100
                self.formalParameter()


            self.state = 103
            self.match(LALGParser.SEMI)
            self.state = 104
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(LALGParser.LPAREN, 0)

        def formalParameterSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.FormalParameterSectionContext)
            else:
                return self.getTypedRuleContext(LALGParser.FormalParameterSectionContext,i)


        def RPAREN(self):
            return self.getToken(LALGParser.RPAREN, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMI)
            else:
                return self.getToken(LALGParser.SEMI, i)

        def getRuleIndex(self):
            return LALGParser.RULE_formalParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameter" ):
                listener.enterFormalParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameter" ):
                listener.exitFormalParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameter" ):
                return visitor.visitFormalParameter(self)
            else:
                return visitor.visitChildren(self)




    def formalParameter(self):

        localctx = LALGParser.FormalParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_formalParameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(LALGParser.LPAREN)
            self.state = 107
            self.formalParameterSection()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGParser.SEMI:
                self.state = 108
                self.match(LALGParser.SEMI)
                self.state = 109
                self.formalParameterSection()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(LALGParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LALGParser.VAR, 0)

        def identifierList(self):
            return self.getTypedRuleContext(LALGParser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(LALGParser.COLON, 0)

        def simpleType(self):
            return self.getTypedRuleContext(LALGParser.SimpleTypeContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_formalParameterSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameterSection" ):
                listener.enterFormalParameterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameterSection" ):
                listener.exitFormalParameterSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameterSection" ):
                return visitor.visitFormalParameterSection(self)
            else:
                return visitor.visitChildren(self)




    def formalParameterSection(self):

        localctx = LALGParser.FormalParameterSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_formalParameterSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(LALGParser.VAR)
            self.state = 118
            self.identifierList()
            self.state = 119
            self.match(LALGParser.COLON)
            self.state = 120
            self.simpleType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(LALGParser.BEGIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.StatementContext)
            else:
                return self.getTypedRuleContext(LALGParser.StatementContext,i)


        def END(self):
            return self.getToken(LALGParser.END, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMI)
            else:
                return self.getToken(LALGParser.SEMI, i)

        def getRuleIndex(self):
            return LALGParser.RULE_compoundStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStatement" ):
                listener.enterCompoundStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStatement" ):
                listener.exitCompoundStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = LALGParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_compoundStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(LALGParser.BEGIN)
            self.state = 123
            self.statement()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGParser.SEMI:
                self.state = 124
                self.match(LALGParser.SEMI)
                self.state = 125
                self.statement()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(LALGParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(LALGParser.AssignmentStatementContext,0)


        def procedureStatement(self):
            return self.getTypedRuleContext(LALGParser.ProcedureStatementContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(LALGParser.CompoundStatementContext,0)


        def conditionalStatement(self):
            return self.getTypedRuleContext(LALGParser.ConditionalStatementContext,0)


        def repetetiveStatement(self):
            return self.getTypedRuleContext(LALGParser.RepetetiveStatementContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LALGParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 133
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.state = 134
                self.procedureStatement()
                pass

            elif la_ == 3:
                self.state = 135
                self.compoundStatement()
                pass

            elif la_ == 4:
                self.state = 136
                self.conditionalStatement()
                pass

            elif la_ == 5:
                self.state = 137
                self.repetetiveStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(LALGParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(LALGParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(LALGParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = LALGParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.variable()
            self.state = 141
            self.match(LALGParser.ASSIGN)
            self.state = 142
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(LALGParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(LALGParser.LPAREN, 0)

        def expressionList(self):
            return self.getTypedRuleContext(LALGParser.ExpressionListContext,0)


        def RPAREN(self):
            return self.getToken(LALGParser.RPAREN, 0)

        def getRuleIndex(self):
            return LALGParser.RULE_procedureStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureStatement" ):
                listener.enterProcedureStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureStatement" ):
                listener.exitProcedureStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureStatement" ):
                return visitor.visitProcedureStatement(self)
            else:
                return visitor.visitChildren(self)




    def procedureStatement(self):

        localctx = LALGParser.ProcedureStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_procedureStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.identifier()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LALGParser.LPAREN:
                self.state = 145
                self.match(LALGParser.LPAREN)
                self.state = 146
                self.expressionList()
                self.state = 147
                self.match(LALGParser.RPAREN)


        except RecognitionException as re:
            localctx.exception = re
